@@ -6,6 +6,11 @@ CHANGE HISTORY
 
 not yet  BJH  Release 10.75.00
 
+              pbmreduce: add -randomseed.
+
+              pbmreduce: fix undefined behavior when scale factor argument is
+              too big.
+
               pbmtext: Fix bug: invalid memory reference when text contains
               code points > 127.  Broken in 10.74.
 
